# d3d12_webgpu_shim

./: .gitignore  CMakeLists.txt  LICENSE.txt  readme.md
src/: d3d12_webgpu_hook.cpp  d3d12_webgpu_shim.cpp  d3d12_webgpu_shim.def  d3d12_webgpu_shim_classes.h  dll_injection.cpp  dll_injection.h  injector.cpp  launcher.cpp
